welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if(nums(i)=lookingFor)
                          ^